syntax = "proto3";
package pb;

message AccountLogin {
  uint32 RoleID = 1;
  string PassWord = 2;
}

message AccountLoginResult {
  uint32 Result = 1; // 1-成功 2-失败
}